a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cecily_thomas/incompatible_expression_types.min
var x: int;
var y: string;
var z: int;

x = 0;
y = "hello";
z = x + y;

